public static class StringKeys
{
    public static string GunShootAnimation = "Shoot";
    public static string GunReloadAnimation = "Reload";
    public static string GunInspectAnimation = "Inspect";
    public static string GunIdleAnimation = "Idle";
    public static string GunDrawAnimation = "Draw";

    public static string ItemUseAnimation = "Use";

    public static string MeleeLightAnimation = "Light";
    public static string MeleeHeavyAnimation = "Heavy";

    public static string KillBannerAnimation = "Trigger";
    public static string KillBannerHeadAnimation = "TriggerHead";

    public static string InputHorizontal = "Horizontal";
    public static string InputVertical = "Vertical";

    public static string PlayerPrefsKeySens = "Sensitivity";
}
